# flutter_sokol

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_sokol/: MainActivity.kt
hook/: build.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: ffi.g.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  main.c  my_application.c  my_application.h
macos/Runner/: AppDelegate.h  AppDelegate.m  main.m
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/core/: Cargo.toml  rust-toolchain.toml
rust/core/src/: flutter.rs  lib.rs  linux.rs  macos.rs
rust/native/: Cargo.toml
rust/native/.helix/: languages.toml
rust/native/src/: dialog.rs  lib.rs  menu.rs  window.rs
rust/native/src/dialog/: desktop.rs  file.rs  message.rs  share.rs
rust/native/src/dialog/ios/: file.rs  message.rs  mod.rs  share.rs
rust/native/src/menu/: menu.rs  menu_item.rs
rust/native/src/menu/macos/: mod.rs
rust/src/: flutter.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
