[package]
name = "sokol_layer"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
epoxy = "0.1.0"
gdk = "^0"
gio = "0.21.5"
gl = "0.14.0"
glib = "0.21.5"
gtk = "0.18.2"
libloading = "0.9.0"
rand = "0.9.2"
sokol = { version="*", git="https://github.com/floooh/sokol-rust.git" }
