[package]
name = "native"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
log = "0.4.29"
raw-window-handle = "0.6.2"
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_os = "ios"))'.dependencies]
native-dialog = { version = "0.9.0", features = [
  "async"
] }

[target.'cfg(target_vendor = "apple")'.dependencies]
block2 = "0.6.1"
dispatch2 = "0.3.0"
objc2 = "0.6.1"
objc2-foundation = { version = "0.3.1", features = [
  "NSArray",
  "NSString",
] }
objc2-uniform-type-identifiers = { version = "0.3.1", features = [
  "UTCoreTypes",
  "UTType",
] }

[target.'cfg(target_os = "ios")'.dependencies]
objc2-ui-kit = { version = "0.3.1", features = [
  "objc2-uniform-type-identifiers",
  "UIApplication",
  "UIDocumentBrowserViewController",
  "UIControl",
  "UIResponder",
  "UIResponder",
  "UITextField",
  "UIView",
  "UIViewController",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3.1" }
